--- a/Dmd/pom.xml
+++ b/Dmd/pom.xml
@@ -10,12 +10,15 @@
 	</parent>
 	<groupId>ddwu.spring</groupId>
 	<artifactId>Dmd</artifactId>
+	<packaging>jar</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Dmd</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
+		<ojdbc.path>C:/Oracle/ojdbc8-full</ojdbc.path>
 	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -34,6 +37,21 @@
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>3.0.0</version>
 		</dependency>
+		
+		<!-- JSTL for JSP -->
+		<dependency> 
+			<groupId>javax.servlet</groupId> 
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+
+		<!-- Need this to compile JSP -->
+		<dependency>
+         	<groupId>org.apache.tomcat.embed</groupId>
+    	 	<artifactId>tomcat-embed-jasper</artifactId>
+  		</dependency>
+  		
+		
 		<dependency>
 			<groupId>org.thymeleaf.extras</groupId>
 			<artifactId>thymeleaf-extras-springsecurity6</artifactId>
@@ -50,14 +68,52 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		
+		<!-- Oracle JDBC driver & security related JARs required to access Oracle Wallets from Java -->
 		<dependency>
 			<groupId>com.oracle.database.jdbc</groupId>
 			<artifactId>ojdbc8</artifactId>
 			<scope>runtime</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>com.oracle.database.ha</groupId>
+					<artifactId>simplefan</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.oracle.database.ha</groupId>
+					<artifactId>ons</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
+		<dependency>
+		    <groupId>com.oracle.database.security</groupId>
+		    <artifactId>oraclepki</artifactId>
+			<!--<scope>system</scope>
+            <systemPath>${ojdbc.path}/oraclepki.jar</systemPath>-->
+		</dependency>		
+		<dependency>
+		    <groupId>com.oracle.database.security</groupId>
+		    <artifactId>osdt_cert</artifactId>
+			<!--<scope>system</scope>
+            <systemPath>${ojdbc.path}/osdt_cert.jar</systemPath>-->
+		</dependency>		
+		<dependency>
+		    <groupId>com.oracle.database.security</groupId>
+		    <artifactId>osdt_core</artifactId>
+			<!--<scope>system</scope>
+            <systemPath>${ojdbc.path}/osdt_core.jar</systemPath>-->
+		</dependency>
+		
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
