--- a/Dmd/src/main/resources/application.properties
+++ b/Dmd/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 # Oracle dataSource 
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@dblab_high?TNS_ADMIN=C:/Oracle/Wallet_DBLab  
-spring.datasource.username=spring
-spring.datasource.password=spring
+spring.datasource.url=jdbc:oracle:thin:@dblab_high?TNS_ADMIN=C:/Oracle/Wallet_DBLab
+#spring.datasource.url=jdbc:oracle:thin:@dblab_high?TNS_ADMIN=/Users/juri/Oracle/Wallet_DBLab
+spring.datasource.username=ss230107
+spring.datasource.password=Spring_91906
 
 # HikariCP settings
 #spring.datasource.hikari.minimumIdle=5
