--- a/Dmd/pom.xml
+++ b/Dmd/pom.xml
@@ -99,9 +99,8 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.example</groupId>
-			<artifactId>jpetstore-boot-spring-data-jpa</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 	</dependencies>
 	<build>
