--- a/Dmd/src/main/resources/application.properties
+++ b/Dmd/src/main/resources/application.properties
@@ -5,6 +5,11 @@ spring.datasource.url=jdbc:oracle:thin:@dblab_high?TNS_ADMIN=C:/Oracle/Wallet_DB
 spring.datasource.username=ss230107
 spring.datasource.password=Spring_91906
 
+#JPA
+spring.jpa.show-sql=true
+spring.jpa.database=oracle
+spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+
 # HikariCP settings
 #spring.datasource.hikari.minimumIdle=5
 #spring.datasource.hikari.maximumPoolSize=20
