--- a/Dmd/src/main/resources/application.properties
+++ b/Dmd/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Oracle dataSource 
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@dblab_high?TNS_ADMIN=C:/Oracle/Wallet_DBLab
 #spring.datasource.url=jdbc:oracle:thin:@dblab_high?TNS_ADMIN=/Users/juri/Oracle/Wallet_DBLab
 spring.datasource.username=ss230107
