--- a/Dmd/src/main/resources/application.properties
+++ b/Dmd/src/main/resources/application.properties
@@ -2,7 +2,8 @@
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 #spring.datasource.url=jdbc:oracle:thin:@dblab_high?TNS_ADMIN=C:/Oracle/Wallet_DBLab
 #spring.datasource.url=jdbc:oracle:thin:@dblab_high?TNS_ADMIN=/Users/juri/Oracle/Wallet_DBLab
-spring.datasource.url=jdbc:oracle:thin:@dblab_high?TNS_ADMIN=/Users/jung/Oracle/Wallet_DBLab
+#spring.datasource.url=jdbc:oracle:thin:@dblab_high?TNS_ADMIN=/Users/jung/Oracle/Wallet_DBLab
+spring.datasource.url=jdbc:oracle:thin:@dblab_high?TNS_ADMIN=/Users/curiepong/Oracle/Wallet_DBLab
 spring.datasource.username=ss230107
 spring.datasource.password=Spring_91906
 
